http/a/main.css
/* ... */
code .line.warning::before {
	color: #ff6;
	font-weight: bold;
}
#ta-cont.line-dig0 { padding-left: 0.8em }
#ta-cont.line-dig1 { padding-left: 1.4em }
#ta-cont.line-dig2 { padding-left: 2em }
#ta-cont.line-dig3 { padding-left: 2.6em }
#ta-cont.line-dig4 { padding-left: 3.2em }
#ta-cont.line-dig5 { padding-left: 3.8em }
#ta-cont.line-dig6 { padding-left: 4.4em }
#ta-cont.line-dig7 { padding-left: 5em }
#ta-cont.line-dig0 #code { width: calc(100% - 0.8rem - 5px) }
#ta-cont.line-dig1 #code { width: calc(100% - 1.4rem - 5px) }
#ta-cont.line-dig2 #code { width: calc(100% - 2rem - 5px) }
#ta-cont.line-dig3 #code { width: calc(100% - 2.6rem - 5px) }
#ta-cont.line-dig4 #code { width: calc(100% - 3.2rem - 5px) }
#ta-cont.line-dig5 #code { width: calc(100% - 3.8rem - 5px) }
#ta-cont.line-dig6 #code { width: calc(100% - 4.4rem - 5px) }
#ta-cont.line-dig7 #code { width: calc(100% - 5rem - 5px) }
code .inline-comment { color: #888 }
code .keyword { color: #fd3 }
code .constant, code .string .escape { color: #df0 }
code .string { color: #6C3 }
code .regex { color: #ffa }
code .regex .open, code .regex .close, code .regex .modifier { color: #ff0 }
code .regex .escape { color: #afa }
code .regex .backreference { color: #0f0 }
code .regex .special { color: #faa }
code .regex .grouper { color: #fff }
code .regex .charclass { color: #ffd }
code .regex .charclass { background: #730 }
code .regex .charclass .range { color: #fed }
code .regex .charclass .punctuation { color: #f90 }
code .regex .quantifier { color: #2af }
code .regex .quantifier .punctuation { color: #8cf }
code .regex .modifier { font-weight: bold }
code .operator { color: #ff8 }
code .operator.assigns, code .equals { color: #8ff }
code .argument, code .number { color: #3df }
code .newvar { font-weight: bold }
code .function-name { color: #f60 }
code .function-call { color: #f90 }
code .prototype { color: #f00 }
code .punctuation, code .dot { color: #ddd }
code .capvar { color: #9ac }
code .browser { color: #9bd }
.connection-error {
	margin-top: 4px;
	background: red;
	color: #fff;
	font-size: 1.5em;
	padding: 2px 8px;
	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
	animation: fadein 0.5s;
	-webkit-animation: fadein 0.5s;
}
.connection-error a, .connection-error a:visited { color: #ffb }
.connection-error a:hover { color: #ffd }
.connection-error a:active { color: #fda }
.ctrls {
	top: 100%; right: -1px;
	z-index: 1;
	background: #cef;
	line-height: 16px;
	padding-bottom: 1px;
}
.comment:last-child:not(:first-child) .ctrls {
	top: auto;
	bottom: 100%;
}
.comment .sctrls {
	float: left;
	padding: 2px 2px 0 0;
	height: 16px;
}
.comment:not(:hover) .sctrls svg:not(.clkd) { opacity: 0.4 }
.comment img { max-height: 200px }
.c-sig { padding-left: 4px }
.c-sig > * { color: #666 }
.ctrls :hover, .diamond { color: #000 }
.ctrls :first-child.clkd { text-shadow: 1px 1px 1px #000; color: #e80 }
.ctrls :nth-child(2):not(:last-child).clkd { color: #0e0 }
.ctrls :last-child { font-size: 0.9em }
input[type=text].large, input[type=search].large, input[type=password].large { font-size: 1.3em }
.comment > pre, .comment > blockquote, .comment > p { margin-bottom: 0 }
blockquote {
	border-left: 2px solid #f90;
	padding-left: 4px;
	margin: 0.3em 0 0.3em 2em;
}
code.blk {
	white-space: pre;
	max-height: 600px;
	max-width: 100%;
	overflow: auto;
	word-break: normal;
	hyphens: none;
	-webkit-hyphens: none;
}
.md-err {
	position: absolute;
	z-index: 1;
	display: inline-block;
	margin-top: -1.3em;
	background: #f00;
	color: #fff;
	padding: 2px 8px;
	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
	animation: fadein 0.5s;
	-webkit-animation: fadein 0.5s;
}
@keyframes fadein {
	from {
		opacity: 0;
	}
}
@-webkit-keyframes fadein {
	from {
		opacity: 0;
	}
}
h1 small, h2 small { font-size: 0.85rem }
h1 small { margin: 0.5em }
h2 small { margin: 0.2em 0.2em 0 0 }
fieldset {
	padding: 0;
	border: none;
}
.popup {
	position: absolute;
	top: 6%; right: 6%; left: 6%;
	background: #fff;
	box-shadow: 1px 1px 8px #000;
}
.user {
	 background: #9ef;
	 color: #000;
	 min-width: 140px;
	 display: inline-block;
	 padding: 4px 8px 4px 4px;
	 text-align: left;
}
.user div {
	margin-left: 4px;
}
.user a { display: block }
.program {
	display: inline-block;
	vertical-align: top;
	max-width: 95%;
}
.program div {
	width: 600px;
	max-width: 100%;
	max-height: 400px;
	height: 28vw;
	min-height: 180px;
	overflow: auto;
}
.program iframe {
	width: 100%;
	height: calc(100% - 5px);
}
.program:nth-child(n+6) { display: none }
.lim-programs .program:nth-child(n+4) { display: none }
@media (min-width: 500px) {
	.program { max-width: 49% }
	.program:nth-child(-n+7) { display: inline-block }
}
@media (min-width: 900px) {
	.program { max-width: 33% }
	.program:nth-child(-n+10), .lim-programs .program:nth-child(4) { display: inline-block }
}
@media (min-width: 1300px) {
	.program { max-width: calc(25% - 4px) }
	.program div { height: 20vw }
	.program:nth-child(-n+13), .lim-programs .program:nth-child(5) { display: inline-block }
}
@media (min-width: 1700px) {
	.program { max-width: calc(20% - 4px) }
	.program div { height: 16vw }
	.program:nth-child(-n+16), .lim-programs .program:nth-child(6) { display: inline-block }
}
.comment { margin-top: 3px }
.comment #up, .comment #dn { width: 18px }
.comment .hover {
	float: left;
	opacity: 0.3;
	padding: 2px 2px 0 0;
	height: 16px;
}
.comment:hover .hover { opacity: 1 }
.comment .rit {
	color: #666;
	font-size: 0.9em;
}
ul, ol, p { margin: 0.3em 0 0.2em }
#err, .error {
	background: #f00;
	color: #fff;
}
.notice { background: #ff0 }
#err a { color: #fff }
#err > * {
	display: block;
	text-align: center;
	padding: 3em;
}
.center { margin: 0 auto }
.center-text, #footer, #nav { text-align: center }
.pre { white-space: pre-wrap }
.clear, footer, .clearfix::after, #content::after, #sidebar::after, .comment::after, nav::after, .row::after, .user::after {
	content: '';
	display: block;
	clear: both;
}
/* ... */

